Update env example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-UNDB_BASE_URL=http://localhost:3721
+ADMIN_EMAIL=email
+ADMIN_PASSWORD=password
+DB_PATH=./undb.sqlite
+DB_BACKUP_DIR=/mnt/backup/db
+DB_MAX_BACKUPS=20
+STORAGE_DIR=./storage
+STORAGE_BACKUP_DIR=/mnt/backup/storage
