Update storage dir

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ ADMIN_PASSWORD=password
 DB_PATH=./undb.sqlite
 DB_BACKUP_DIR=/mnt/backup/db
 DB_MAX_BACKUPS=20
-STORAGE_DIR=./storage
+STORAGE_DIR=/mnt/storage
 STORAGE_BACKUP_DIR=/mnt/backup/storage
