--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,4 +13,4 @@ services:
       - UNDB_ADMIN_PASSWORD=${ADMIN_PASSWORD}
     volumes:
       - ./undb.sqlite:/usr/src/app/undb.sqlite
-      - ./storage:/usr/src/app/.undb/storage
+      - ${STORAGE_DIR}:/usr/src/app/.undb/storage
