--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     ports:
       - 3721:3721
     environment:
-      - UNDB_BASE_URL=http://localhost:3721
+      - UNDB_BASE_URL=${BASE_URL}
       - UNDB_DISABLE_REGISTRATION=true
       - UNDB_ADMIN_EMAIL=${ADMIN_EMAIL}
       - UNDB_ADMIN_PASSWORD=${ADMIN_PASSWORD}
