Add mail env vars

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ DB_BACKUP_DIR=/mnt/backup/db
 DB_MAX_BACKUPS=20
 STORAGE_DIR=/mnt/storage
 STORAGE_BACKUP_DIR=/mnt/backup/storage
+MAIL_HOST=smtp.protonmail.ch
+MAIL_PORT=587
+MAIL_USER=user
+MAIL_PASS=pass
