--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - 3721:3721
     environment:
       - UNDB_BASE_URL=${BASE_URL}
-      - UNDB_DISABLE_REGISTRATION=true
+      - UNDB_DISABLE_REGISTRATION=false # Disabling registration will breaks invites
       - UNDB_ADMIN_EMAIL=${ADMIN_EMAIL}
       - UNDB_ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - UNDB_MAIL_HOST=${MAIL_HOST}
